# cpp_satellite_analyzer

./: .gitignore  CMakeLists.txt  CREDITS  LICENSE  README.md  UCSSatelliteDatabase.cpp  UCSSatelliteDatabase.h  UCSSatelliteEntry.cpp  UCSSatelliteEntry.h  Util.cpp  build.sh  candidate_satellite_t.h  ecm_analysis_t.h  main.cpp  preprocess.py
.github/workflows/: c-cpp.yml
include/: loguru.cpp  loguru.hpp
src/: Settings.h  UCSSatelliteDatabase.cpp  UCSSatelliteDatabase.h  UCSSatelliteEntry.cpp  UCSSatelliteEntry.h  Util.cpp  ecm_analysis_t.h  main.cpp
src/include/: csv.h
src/visualizer/: Physics IA Analysis.ipynb  generate_visualization.py
src/visualizer/.ipynb_checkpoints/: Physics IA Analysis-checkpoint.ipynb
